--- a/hello-Css/boxes.html
+++ b/hello-Css/boxes.html
@@ -3,12 +3,12 @@
     <head>
         <title>Boxes</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="box_styles.css">
+        <link rel="stylesheet" href="../hello-Css/boxe-styles.css">
     </head>
     <body>
         <h1>Headings are Block Elements</h1>
         <p> 
-            paragrahs are blocks too. <em>However</em>, &lt;em&gt; and &lt;strong&gt;
+            paragrahs are blocks too. <em>However, whatever goes</em>, &lt;em&gt; and &lt;strong&gt;
             are not. They are <strong>inline</strong> elements.
         </p>
         <div style="padding-top: 1px "></div>
