--- a/css-selectors/selectors.html
+++ b/css-selectors/selectors.html
@@ -19,7 +19,7 @@
         for us to style.</p>
 
         <div class="button">Button</div>
-        <div class="call-to-action">Button</div>
+        <div class="call-to-action button">Button</div>
         </div>
     </body>
 </html>
