--- a/css-selectors/selectors.html
+++ b/css-selectors/selectors.html
@@ -18,8 +18,8 @@
         <a href="https://internetingishard.com">Interneting is hard</a>
         for us to style.</p>
 
-        <div class="button">Button</div>
-        <div class="call-to-action button">Button</div>
+        <a class="button" href="nowhere.html">Button</a>
+        <a class="button call-to-action" href="nowhere">Button</a>
         </div>
     </body>
 </html>
