new website plus changes to old test pages

--- a/css-selectors/selectors.html
+++ b/css-selectors/selectors.html
@@ -2,7 +2,7 @@
 <html>
     <head lang="en">
         <title>Css Selectors</title>
-        <meta charset="UT-F8">
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="../css-selectors/selectors-styles.css">
     </head>
     <body>
@@ -18,8 +18,8 @@
         <a href="https://internetingishard.com">Interneting is hard</a>
         for us to style.</p>
 
-        <a class="button" href="nowhere.html">Button</a>
-        <a class="button call-to-action" href="nowhere">Button</a>
+        <a class="button" href="../hello-Css/boxes.html">Button</a>
+        <a class="button call-to-action" href="../hello-Css/boxes.html">Button</a>
         </div>
     </body>
 </html>
