created new containers for website.

--- a/Donut/page.html
+++ b/Donut/page.html
@@ -6,8 +6,13 @@
         <link rel="stylesheet" href="../Donut/page-styles.css">
     </head>
     <body>
-        <header>
-            <h1>Yo!</h1>
-        </header>
+        <div class="main site wrapping">
+            <div class="header-container">
+
+            </div>
+            <div class="welcome-landing-container">
+
+            </div>
+        </div>
     </body>
 </html>
