--- a/css-selectors/selectors.html
+++ b/css-selectors/selectors.html
@@ -21,5 +21,9 @@
         <a class="button" href="../hello-Css/boxes.html">Button</a>
         <a class="button call-to-action" href="../hello-Css/boxes.html">Button</a>
         </div>
+        <div class="sidebar">
+            <p>if this page had a sidebar</p>
+            <p>we would have a problem with pseudo-classes</p>
+        </div>
     </body>
 </html>
