--- a/Donut/page.html
+++ b/Donut/page.html
@@ -2,17 +2,21 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>Sodesigns</title>
+        <title>Stephanie O</title>
         <link rel="stylesheet" href="../Donut/page-styles.css">
     </head>
     <body>
-        <div class="main site wrapping">
-            <div class="header-container">
-
-            </div>
-            <div class="welcome-landing-container">
-
-            </div>
-        </div>
+        <h1>Hello!</h1>
+        <p>My name is Stephanie Osaje and I am a Front-end 
+            web designer and part time Illustrator.
+        </p>
+        <ul>
+            <li>About</li>
+            <li>Illustrations</li>
+            <li>Code</li>
+        </ul>
+        <script>
+            alert('Hello World');
+        </script>
     </body>
-</html>
+</html> 
