--- a/Donut/index.html
+++ b/Donut/index.html
@@ -41,8 +41,21 @@
         </div>
       </div>
      </header>
-     <div class="container">
-       
+     <div class="container features">
+       <div class="row">
+         <div class="col-lg-4 col-md-4col-sm-12">
+           <h3 class="feature-title">illustrations</h3>
+           <img src="links and images/smileyicecream.png" class="img-fluid">
+         </div>
+         <div class="col-lg-4 col-md-4 col-sm-12">
+           <h3 class="feature-title">my git</h3>
+           <img src="links and images/smileymuffin.png" class="img-fluid">
+         </div>
+         <div class="col-lg-4 col-md-4 col-sm-12">
+          <h3 class="feature-title">about me!</h3>
+          <img src="links and images/profilepic2.png" class="img-fluid">
+         </div>
+       </div>
      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
