--- a/Donut/index.html
+++ b/Donut/index.html
@@ -43,17 +43,20 @@
      </header>
      <div class="container features">
        <div class="row">
-         <div class="col-lg-4 col-md-4col-sm-12">
+         <div class="col-lg-4 col-md-4col-sm-12 ice">
            <h3 class="feature-title">illustrations</h3>
-           <img src="links and images/smileyicecream.png" class="img-fluid">
+           <img src="links and images/smileyicecream.png" class="img-fluid" id="smiley">
+           <div class="middle">
+             <div class="text">illustrations</div>
+           </div>
          </div>
-         <div class="col-lg-4 col-md-4 col-sm-12">
+         <div class="col-lg-4 col-md-4 col-sm-12 muff">
            <h3 class="feature-title">my git</h3>
-           <img src="links and images/smileymuffin.png" class="img-fluid">
+           <img src="links and images/smileymuffin.png" class="img-fluid" id="muffin">
          </div>
-         <div class="col-lg-4 col-md-4 col-sm-12">
+         <div class="col-lg-4 col-md-4 col-sm-12 me">
           <h3 class="feature-title">about me!</h3>
-          <img src="links and images/profilepic2.png" class="img-fluid">
+          <img src="links and images/profilepic2.png" class="img-fluid" id="profile">
          </div>
        </div>
      </div>
