new stuff yooooo

--- a/Donut/index.html
+++ b/Donut/index.html
@@ -53,11 +53,17 @@
          <div class="col-lg-4 col-md-4 col-sm-12 muff">
            <h3 class="feature-title">my git</h3>
            <img src="links and images/smileymuffin.png" class="img-fluid" id="muffin">
-         </div>
+           <div class="middle2">
+            <div class="textmuff">git</div>
+          </div>
+          </div>
          <div class="col-lg-4 col-md-4 col-sm-12 me">
           <h3 class="feature-title">about me!</h3>
           <img src="links and images/profilepic2.png" class="img-fluid" id="profile">
-         </div>
+          <div class="middle3">
+            <div class="textme">about me!</div>
+          </div>
+        </div>
        </div>
      </div>
     <!-- Optional JavaScript -->
