new link animation trials and errors arrrrghhh!!!!

--- a/Donut/index.html
+++ b/Donut/index.html
@@ -37,28 +37,25 @@
             Since the dawn of time man has always found ways to land their
             pages.
           </p>
-          <button class="btn btn-outline-secondary btn-lg">See My Stuff!</button>
+          <a href="#mystuff" class="link animated fadeInUp delay-1s servicelink">See My Stuff</a>
         </div>
       </div>
      </header>
-     <div class="container features">
+     <div class="container features" id="mystuff">
        <div class="row">
-         <div class="col-lg-4 col-md-4col-sm-12 ice">
-           <h3 class="feature-title">illustrations</h3>
+         <div class="col-lg-4 col-md-4 col-sm-12 ice">
            <img src="links and images/smileyicecream.png" class="img-fluid" id="smiley">
            <div class="middle">
              <div class="text">illustrations</div>
            </div>
          </div>
-         <div class="col-lg-4 col-md-4 col-sm-12 muff">
-           <h3 class="feature-title">my git</h3>
+         <div class="col-lg-4 col-md-4 col-sm-12 muff">  
            <img src="links and images/smileymuffin.png" class="img-fluid" id="muffin">
            <div class="middle2">
             <div class="textmuff">git</div>
           </div>
           </div>
          <div class="col-lg-4 col-md-4 col-sm-12 me">
-          <h3 class="feature-title">about me!</h3>
           <img src="links and images/profilepic2.png" class="img-fluid" id="profile">
           <div class="middle3">
             <div class="textme">about me!</div>
