--- a/Cupcake/front-page.html
+++ b/Cupcake/front-page.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Stephanie O</title>
+    <title>stephanieo</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -41,28 +41,40 @@
                   </div>
                 </div>
                </header>
-               <div class="container">
-                    <div class="grid">
-                            <div class="grid-item"></div>
-                            <div class="grid-item grid-item--width3 grid-item--height2"></div>
-                            <div class="grid-item grid-item--height2"></div>
-                            <div class="grid-item grid-item--height2"></div>
-                            <div class="grid-item .grid-item--width2"></div>
-                            <div class="grid-item"></div>
-                            <div class="grid-item"></div>
-                            <div class="grid-item grid-item--height4"></div>
-                            <div class="grid-item grid-item--width2 grid-item--height3"></div>
-                            <div class="grid-item"></div>
-                            <div class="grid-item grid-item--height3"></div>
-                            <div class="grid-item grid-item--height1"></div>
-                    </div>
+               <div class="container-fluid">
+                    <div class="gallery">
+                            <div class="pic"></div>
+                            <div class="pic pic-w3 pic-h2"></div>
+                            <div class="pic pic-h2"></div>
+                            <div class="pic pic-h3"></div>
+                            <div class="pic pic-w2"></div>
+                            <div class="pic"></div>
+                            <div class="pic"></div>
+                            <div class="pic pic-h4"></div>
+                            <div class="pic pic-w2 pic-h3"></div>
+                            <div class="pic"></div>
+                            <div class="pic pic-h3"></div>
+                            <div class="pic"></div>
+                            <div class="pic pic-w2 pic-h2"></div>
+                            <div class="pic pic-w2"></div>
+                                
+                         </div>
                </div>
+    <script src="/Cupcake/masonry-docs/masonry.pkgd.min.js"></script>
+    <script>
+        var container = document.querySelector ('.gallery');
+        var gallery = new Masonry(container, {
+            columnWidth: 20,
+            itemSelector: '.pic',
+            gutter: 20
+        });
+    </script>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="front-page.js"></script>
-    <script src="/masonry-docs/js/masonry-docs.min.js"></script>
   </body>
 </html>
