--- a/Cupcake/front-page.html
+++ b/Cupcake/front-page.html
@@ -109,6 +109,7 @@
             <img class="img-fluid" src="links and images/Gigi.jpg" alt="Card image cap">
         </div>
       </div>
+    </div>
       <!-- Grid row -->
 
     <!-- Optional JavaScript -->
